        the regulars" logic.
      # More AGF messages were added, including some pulled in from a GitHub
        merge (our first community code contribution!). Some category
        labels were pre-pended to help better manage this growing list.
        The code copy was also synced with community copy at:
        http://en.wikipedia.org/wiki/WP:STiki/Good-faith-revert_messages
      
      = Need to fix a problem pertaining to null diffs being displayed
      = Investigate mouseover to show full edit comments when lengthy
  
  * 2014-03-25
      # Emergency release in order to fix login code broken by a small
        WMF change (most of the burden probably falls to STiki for getting
        this incorrect). This update will be forced; that is, older versions
        of the STiki software will show an "upgrade required" message.
      # Changed the "Revision Filter" menu title to "Displayed Edits"
        in order to clear up some abiguity over sub-menu items.
  
  * 2014-02-05
      # The colors and font faces used in the diff presentation panel can
        now be changed via the "options" menu (T#037).
      # Per user request, larger font size options were made available (T#035).
      # Plurality switches ("#s#") are now utilized in the default AGF 
        messages, making them more customized to specific revert 
        cirumstances. Articles are also now linked in default AGF messages.
      # The WMF changed diff representation format, sending our
        parser into infinite loops on the back-end; eventually exhausting
        threads and halting edit ingestion. On the front-end, this caused 
        some diffs to be mis-colored. The parser was fixed in both cases.
  
  * 2013-11-30
      # The "user talk" link which appears in the "metadata" and "last 
        revert" panels has been modified so it is appropriately blue/red 
        based on the existence of that page. (T#034)
      # A new substitution, "#p#", is available for use when authoring 