@@ -116,7 +116,7 @@ public class diff_markup{
 	public static void reset_default_colors(){
 		COLOR_DIFF_BG = DEF_COL_DIFF_BG;
 		COLOR_DIFF_WORDS = DEF_COL_DIFF_WORDS;
-		COLOR_DIFF_CONT =DEF_COL_DIFF_CONT;
+		COLOR_DIFF_CONT = DEF_COL_DIFF_CONT;
 		COLOR_DIFF_DEL = DEF_COL_DIFF_DEL;
 		COLOR_DIFF_ADD  = DEF_COL_DIFF_ADD;
 		COLOR_DIFF_NOTE = DEF_COL_DIFF_NOTE;
